--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,13 @@
 <resources>
     <color name="colorPrimary">#fff</color>
     <color name="colorPrimaryDark">#fff</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#258bd6</color>
 
     <color name="card_bj_color">#EDE8E8</color>
+    <color name="card_bg_dark_color">#0e0e0e</color>
     <color name="title_text_color">#258bd6</color>
     <color name="content_text_color">#999da4</color>
+
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
